<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context="com.example.rajee.farmmanager.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/font_large"
        android:textColor="@color/dark_black"
        android:textStyle="bold"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/temp_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_humidity"
        android:textSize="@dimen/font_medium"
        android:textColor="@color/white"
        android:background="@drawable/green_button"
        android:padding="12dp"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout android:id="@+id/fan_layout"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingTop="50dp"
                android:layout_marginLeft="10dp"
                tools:text="">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fan_hint"
                    android:textSize="@dimen/font_small"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/turn_fan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_fan"
                    android:textSize="@dimen/font_medium"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/red_button"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"/>
            </LinearLayout>

            <View android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:id="@+id/vertical_line"
                android:layout_toRightOf="@id/fan_layout"
                android:layout_marginLeft="40dp"/>

            <LinearLayout android:id="@+id/fan_sprinkler_layout"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingTop="40dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/vertical_line">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fan_sprinkler_hint"
                    android:textSize="@dimen/font_small"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/turn_fan_sprinkler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_fan_sprinkler"
                    android:textSize="@dimen/font_medium"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/purple_button"
                    android:padding="5dp"/>
            </LinearLayout>
    </RelativeLayout>

</LinearLayout>
